--- a/rollans_report/sass/_init.scss
+++ b/rollans_report/sass/_init.scss
@@ -5,16 +5,15 @@
 // Set up some variables.
 
 // Font stacks.
-$base-font-size: 14px; // The font size set on the root html element.
-$base-font-size-value: 14; // Used in font-size calculation functions.
+$rem-base: 16px;
 $base-line-height: 24px; // This line-height determines the basic unit of vertical rhythm.
 
-$h1-font-size: 1.45 * $base-font-size;
-$h2-font-size: 1.5  * $base-font-size;
-$h3-font-size: 1.17 * $base-font-size;
-$h4-font-size: 1    * $base-font-size;
-$h5-font-size: 0.83 * $base-font-size;
-$h6-font-size: 0.67 * $base-font-size;
+$h1-font-size: 1.45 * $rem-base;
+$h2-font-size: 1.5  * $rem-base;
+$h3-font-size: 1.17 * $rem-base;
+$h4-font-size: 1    * $rem-base;
+$h5-font-size: 0.83 * $rem-base;
+$h6-font-size: 0.67 * $rem-base;
 
 $georgia:         Georgia, "Times New Roman", "DejaVu Serif", serif;
 $tahoma:          Tahoma, Verdana, "DejaVu Sans", sans-serif;
@@ -36,6 +35,9 @@ $font-monospace:   $courier;
 $green:       #7ab86f;
 $green-dark:  darken(#7ab86f, 15%);
 $gray-dark:   #333333;
+$white:       #ffffff;
+$mapgrey:     #e8e8e8;
+$mapgrey-darker: #999;
 
 // The amount lists, blockquotes and comments are indented.
 $indent-amount: 30px;
@@ -45,3 +47,4 @@ $indent-amount: 30px;
 @import "compass/css3";
 @import "compass/typography/vertical_rhythm";
 @import "compass/utilities/general/clearfix";
+@import "compass/reset/utilities";
